<resources>
    <string name="app_name">DigitalHouseFood</string>
    <string name="email"></string>
    <string name="log_in">log_in</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="Repeat_password">Repeate Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>